k8s/database.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: gateway-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      run: database
  template:
    metadata:
      labels:
        run: database
    spec:
      containers:
      - image: mongo:latest
        imagePullPolicy: Always
        name: database
        ports:
        - containerPort: 27101
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: gateway-demo
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    run: database
  sessionAffinity: None
  type: ClusterIP
