k8s/postgres.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      run: postgres
  template:
    metadata:
      labels:
        run: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-init
          mountPath: /docker-entrypoint-initdb.d 
      volumes:
      - name: postgres-init 
        configMap: 
          name: postgres-init
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: gateway-demo
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    run: postgres
  sessionAffinity: None
  type: ClusterIP
