k8s/api-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: gateway
  name: gateway
  namespace: gateway-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      run: gateway
  template:
    metadata:
      labels:
        run: gateway
    spec:
      containers:
      - image: crdant/greeting-api-gateway
        name: gateway
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: gateway-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: gateway
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  namespace: gateway-demo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - gateway.minikube.crdant.io
    secretName: gateway-tls
  rules:
  - host: gateway.minikube.crdant.io
    http:
      paths:
      - path: /
        backend:
          serviceName: gateway
          servicePort: 80
