k8s/configserver.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: configserver
  name: configserver
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      run: configserver
  template:
    metadata:
      labels:
        run: configserver
    spec:
      containers:
      - image: crdant/configserver
        name: configserver
---
apiVersion: v1
kind: Service
metadata:
  name: config
  namespace: demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: configserver
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: configserver
  namespace: demo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - config.minikube.crdant.io
    secretName: configserver-tls
  rules:
  - host: config.minikube.crdant.io
    http:
      paths:
      - path: /
        backend:
          serviceName: config
          servicePort: 80
