k8s/eureka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: eureka
  name: eureka
  namespace: gateway-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      run: eureka
  template:
    metadata:
      labels:
        run: eureka
    spec:
      containers:
      - image: springcloud/eureka
        name: eureka
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
  namespace: gateway-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8761
  selector:
    run: eureka
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eureka
  namespace: gateway-demo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - eureka.minikube.crdant.io
    secretName: eureka-tls
  rules:
  - host: eureka.minikube.crdant.io
    http:
      paths:
      - path: /
        backend:
          serviceName: eureka
          servicePort: 80
