k8s/mongodb.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: demo
  labels:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/instance: mongodb-datastore
    app.kubernetes.io/component: database
    app.kubneretes.io/part-of: gateway-demo
spec:
  replicas: 1
  serviceName: mongodb
  selector:
    matchLabels:
      run: mongodb
  template:
    metadata:
      labels:
        run: mongodb
        app.kubernetes.io/name: mongodb
        app.kubernetes.io/instance: mongodb-datastore
        app.kubernetes.io/component: database
        app.kubneretes.io/part-of: gateway-demo
    spec:
      containers:
      - image: mongo:latest
        imagePullPolicy: Always
        name: mongodb
        ports:
        - containerPort: 27101
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /data/db
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mongodb
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: demo
  labels:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/instance: mongodb-datastore
    app.kubernetes.io/component: database
    app.kubneretes.io/part-of: gateway-demo
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    run: mongodb
  sessionAffinity: None
  type: ClusterIP
  clusterIP: None
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-allow-services
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mongodb
      app.kubernetes.io/instance: mongodb-datastore
      app.kubernetes.io/part-of: gateway-demo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: services
          app.kubernetes.io/part-of: gateway-demo
    ports:
    - protocol: TCP
      port: 27017
